<resources>
    <string name="app_name">tp_integrador</string>
    <string name="bienvenida">Hola</string>
    <string name="tipoInversor">Tipo de Inversor:</string>
    <string name="botonSimular">Simular</string>
    <string name="botonDesconectar">Desconectar</string>
    <string name="botonHistorial">Ver Historial</string>
    <string name="comparador">Comparador de Inversiones</string>
    <string name="capital1">Capital Inversion 1</string>
    <string name="capital2">Capital Inversion 2</string>
    <string name="plazoInversion1">Plazo Inversión 1 (en días)</string>
    <string name="tna1">TNA de la Inversión 1</string>
    <string name="entidad1">Entidad de la Inversión 1</string>
    <string name="plazoInversion2">Plazo Inversión 2 (en días)</string>
    <string name="tna2">TNA de la Inversión 2</string>
    <string name="entidad2">Entidad de la Inversión 2</string>
    <string name="botonComparar">Comparar</string>
    <string name="tituloTest">Test del Inversor</string>
    <string name="pregunta1Test">¿Qué experiencia tenés como inversionista?</string>
    <string name="opcion1preg1">A- Baja.</string>
    <string name="opcion2preg1">B- Media.</string>
    <string name="opcion3preg1">C- Alta.</string>
    <string name="pregunta2Test">¿Qué porcentaje de tus ahorros estás dispuesto a destinar a las inversiones en el Mercado de Capitales?</string>
    <string name="opcion1preg2">A- Menos del 25%.</string>
    <string name="opcion2preg2">B- Entre el 25% y el 50%.</string>
    <string name="opcion3preg2">C- Más del 50%.</string>
    <string name="pregunta3Test">¿Cuánto tiempo conservarías esta inversión?</string>
    <string name="opcion1preg3">A- Menos de 180 días.</string>
    <string name="opcion2preg3">B- Entre 180 días y 2 años.</string>
    <string name="opcion3preg3">C- Más de 2 años.</string>
    <string name="botonEnviar">Enviar</string>
    <string name="datos">Ingrese sus datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="botonIngreso">Ingresar</string>
    <string name="botonTyC">Validar Términos y Condiciones</string>
    <string name="tituloTyC">Política de Términos y Condiciones</string>
    <string name="tyc">La presente aplicación solamente ofrece servicios de consulta online sobre financiación y/o inversión y no realiza préstamos, emite tarjetas y/o hace inversiones de ningún tipo. \nEl operador de esta web no es prestamista, agente, gestor, representante o corredor de financiera alguna, y no cobra a sus usuarios por ningún producto o servicio financiero. \nLos datos cargados no constituyen ningún tipo de oferta y/o solicitud de productos financieros por parte de la aplicación y corren bajo mi absoluta responsabilidad.</string>
    <string name="aceptacionTyC">He leído y acepto los términos y condiciones de uso</string>
    <string name="botonAceptar">Aceptar</string>
    <string name="botonNoAceptar">No Aceptar</string>
    <string name="inversionResultado1">Inversión 1</string>
    <string name="inversionResultado2">Inversión 2</string>
    <string name="roi1">ROI 1: 0%</string>
    <string name="roi2">ROI 2: 0%</string>
    <string name="botonGuardar">Guardar Inversión</string>
    <string name="botonVolver">Volver Atrás</string>
    <string name="resultadoComparacion">El resultado aparecerá aquí</string>
</resources>