<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloTest"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1Test"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/answer1Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion1preg1"
            android:tag="1"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
        <RadioButton
            android:id="@+id/answer1Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion2preg1"
            android:tag="2"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
        <RadioButton
            android:id="@+id/answer1Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion3preg1"
            android:tag="3"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta2Test"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/answer2Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion1preg2"
            android:tag="1"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
        <RadioButton
            android:id="@+id/answer2Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion2preg2"
            android:tag="2"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
        <RadioButton
            android:id="@+id/answer2Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion3preg2"
            android:tag="3"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta3Test"
        android:textSize="16sp"/>
    <RadioGroup
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/answer3Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion1preg3"
            android:tag="1"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
        <RadioButton
            android:id="@+id/answer3Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion2preg3"
            android:tag="2"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
        <RadioButton
            android:id="@+id/answer3Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion3preg3"
            android:tag="3"
            android:padding="8dp"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonEnviar"/>

</LinearLayout>
