<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ingresoUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/datos"/>


    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:hint="@string/apellido"

        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/correoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:hint="@string/correoElectronico"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/botonTyC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:visibility="visible"
        android:backgroundTint="@color/brandGreen"
        android:textColor="@color/secondaryText"
        android:text="@string/botonTyC"/>

    <CheckBox
        android:id="@+id/checkedTyC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:visibility="invisible"
        android:text="@string/aceptacionTyC"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:visibility="invisible"
        android:backgroundTint="@color/brandGreen"
        android:textColor="@color/secondaryText"
        android:text="@string/botonAceptar"/>

    <Button
        android:id="@+id/botonIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:visibility="invisible"
        android:backgroundTint="@color/brandGreen"
        android:textColor="@color/secondaryText"
        android:text="@string/botonIngreso"/>


</LinearLayout>